# ES_PROJECT_FreeRTOS_SMP_RP2040

./: .gitignore  CMakeLists.txt  README.md  client.py  clientSerial.py  clientTCP.py
RP2040/: CMakeLists.txt
RP2040/LibraryFreeRTOS_RP2040/: LibraryFreeRTOS_RP2040.h
RP2040/OnBothCores/: CMakeLists.txt  main.c
RP2040/OnEitherCore/: CMakeLists.txt  FreeRTOSConfig.h  main.c
RP2040/TestFreeRTOSWifi/: ApplicationHooks.h  CMakeLists.txt  LibraryFreeRTOS_RP2040.h
RP2040/TestOperations/: CMakeLists.txt  test_operations.c
RP2040/TestSemaphores/: ApplicationHooks.h  CMakeLists.txt  LibraryFreeRTOS_RP2040.h  main.c  test_semaphores.c
RP2040/TestSemaphoresSingleExec/: CMakeLists.txt  LibraryFreeRTOS_RP2040Config.h  test_semaphores_singleexec.c
RP2040/hello_serial/: CMakeLists.txt
RP2040/hello_usb/: CMakeLists.txt
RP2040/include/: LibraryFreeRTOS_RP2040.h  macro_project.h
RP2040/picow_tcp_client/: CMakeLists.txt  picow_tcp_client.c
TestFreeRTOSWifi/: CMakeLists.txt  lwipopts.h  main.c  picow_tcp_client.c  picow_tcp_client.h
TestOperations/: CMakeLists.txt  LibraryFreeRTOS_RP2040Config.h  test_operations.c
TestQueue/: CMakeLists.txt  test_queue.c
TestSemaphores/: CMakeLists.txt  test_semaphores.c
TestSemaphoresSingleExec/: CMakeLists.txt  test_semaphores_singleexec.c
include/: FreeRTOSConfig.h  LibraryFreeRTOS_RP2040.h  LibraryFreeRTOS_RP2040Config.h
